--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -4,13 +4,30 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:WorkoutDiary.Views"
-    Shell.FlyoutBehavior="Disabled"
+    Shell.FlyoutBehavior="Flyout"
+    Shell.ForegroundColor="White" Shell.FlyoutBackdrop="White"
     Title="WorkoutDiary">
 
-    <ShellContent
+
+    <FlyoutItem Title="Dziennik ćwiczeń" Icon="book">
+        <ShellContent
         Title="Dziennik ćwiczeń"
         ContentTemplate="{DataTemplate local:MainPage}"
         Route="MainPage"
         Icon="{OnPlatform 'icon_notes.png', Android='icon_notes_ios.png', MacCatalyst='icon_notes_ios.png'}"/>
-    <ShellContent Title="Add Exercise" Route="AddExercisePage" ContentTemplate="{DataTemplate local:AddExercisePage}" />
+    </FlyoutItem>
+    <FlyoutItem Title="Statystyka" Icon="graph">
+        <ShellContent Title="Statystyka" Route="StatisticPage" ContentTemplate="{DataTemplate local:StatisticPage}" />
+    </FlyoutItem>
+    <ShellContent FlyoutItemIsVisible="False" Title="Add Exercise" Route="AddExercisePage" ContentTemplate="{DataTemplate local:AddExercisePage}" />
+    <Shell.FlyoutFooter>
+        <Grid BackgroundColor="Transparent" Padding="10">
+            <Border BackgroundColor="red">
+                <Button Text="Wyczyść dziennik ćwiczeń"
+                Command="{Binding DeleteAll}"
+                BackgroundColor="Black"
+                TextColor="red"/>
+            </Border>
+        </Grid>
+    </Shell.FlyoutFooter>
 </Shell>
