--- a/Views/AddExercisePage.xaml
+++ b/Views/AddExercisePage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="WorkoutDiary.Views.AddExercisePage"
              xmlns:viewModels="clr-namespace:WorkoutDiary.ViewModels"
-             Title="Dodaj ćwiczenie"
+             Title="Dodaj ćwiczenie" Shell.TitleColor="White"
              BackgroundColor="DarkGray">
     <Grid>
 
@@ -11,49 +11,59 @@
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
-        <Border Margin="20" StrokeShape="RoundRectangle 45" StrokeThickness="4" Stroke="White">
+
+        <Border Margin="20" StrokeShape="RoundRectangle 45" StrokeThickness="4" Grid.Row="2" Stroke="White">
 
 
-    <Grid  Margin="20" VerticalOptions="Center" Padding="15" Grid.Row="1">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-        </Grid.RowDefinitions>
-        <Label Grid.Row="0" Text="Partia ciała" />
-        <Entry Grid.Row="1" x:Name="PartEditor"
+            <Grid  Margin="20" VerticalOptions="Center" Padding="15" Grid.Row="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                </Grid.RowDefinitions>
+                <Label Grid.Row="0" Text="Dodaj ćwiczenie"  />
+                <Entry Grid.Row="1" x:Name="PartEditor"
         Text="{Binding Part}"
         HeightRequest="50" />
-        <Label Grid.Row="2" Text="Ilość serii"/>
-        <Entry Grid.Row="3" x:Name="SeriesEditor"
+                <Label Grid.Row="2" Text="LUB" HorizontalOptions="Center" FontSize="20"/>
+                <Picker x:Name="namePicker"
+        Grid.Row="3" Margin="0,0,0,0"
+        Title="Wybierz ćwiczenie z listy"
+        TitleColor="White"
+        TextColor="black"
+        BackgroundColor="DarkGray"
+        SelectedIndexChanged="OnNameSelected">
+                </Picker>
+                <Label Grid.Row="4" Text="Ilość serii"/>
+                <Entry Grid.Row="5" x:Name="SeriesEditor"
         Keyboard="Numeric"
         Text="{Binding Series}"
         HeightRequest="50" />
-        <Label Grid.Row="4" Text="Ilość powtórzeń"/>
-        <Entry Grid.Row="5" x:Name="RepetitionsEditor"
+                <Label Grid.Row="6" Text="Ilość powtórzeń"/>
+                <Entry Grid.Row="7" x:Name="RepetitionsEditor"
         Keyboard="Numeric"
-        Placeholder="Powtórzenia"
         Text="{Binding Repetitions}"
         HeightRequest="50" />
-        <Label Grid.Row="6" Text="waga"/>
-        <Entry Grid.Row="7" x:Name="WeightEditor"
+                <Label Grid.Row="8" Text="obciążenie"/>
+                <Entry Grid.Row="9" x:Name="WeightEditor"
         Keyboard="Numeric"
-        Placeholder="Waga"
         Text="{Binding Weight}"
         HeightRequest="50" />
 
-        <Button Grid.Row="8" Text="Zapisz"
+                <Button Grid.Row="10" Text="Zapisz"
                
             Command="{Binding SaveCommand}" Background="White"/>
 
 
-    </Grid>
-    </Border>
+            </Grid>
+        </Border>
     </Grid>
 </ContentPage>
