--- a/App.xaml
+++ b/App.xaml
@@ -6,8 +6,11 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Resources/Styles/Colors.xaml" />
+                <!--<ResourceDictionary Source="Resources/Styles/Colors.xaml" />
                 <ResourceDictionary Source="Resources/Styles/Styles.xaml" />
+                --><!--<ResourceDictionary Source="Resources/Styles/LightTheme.xaml" />--><!--
+                <ResourceDictionary Source="/DarkTheme.xaml" />-->
+                <ResourceDictionary Source="/LightTheme.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
