--- a/Views/AddExercisePage.xaml
+++ b/Views/AddExercisePage.xaml
@@ -3,8 +3,11 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="WorkoutDiary.Views.AddExercisePage"
              xmlns:viewModels="clr-namespace:WorkoutDiary.ViewModels"
-             Title="Dodaj ćwiczenie" Shell.TitleColor="White"
-             BackgroundColor="DarkGray">
+             Title="Dodaj ćwiczenie" Shell.TitleColor="{DynamicResource PrimaryColor}"
+             BackgroundColor="{DynamicResource PageBackgroundColor}">
+    <ScrollView>
+        
+
     <Grid>
 
         <Grid.RowDefinitions>
@@ -12,10 +15,10 @@
             <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
 
-        <Border Margin="20" StrokeShape="RoundRectangle 45" StrokeThickness="4" Grid.Row="2" Stroke="White">
+        <Border Margin="20" StrokeShape="RoundRectangle 5" StrokeThickness="2" Background="{DynamicResource PageBackgroundColor}" Grid.Row="0" Stroke="#FFFFFF">
 
 
-            <Grid  Margin="20" VerticalOptions="Center" Padding="15" Grid.Row="1">
+            <Grid  Margin="20" VerticalOptions="Center" ColumnSpacing="5" Padding="25" Grid.Row="0" RowSpacing="8" >
                 <Grid.RowDefinitions>
                     <RowDefinition Height="auto"/>
                     <RowDefinition Height="auto"/>
@@ -28,42 +31,72 @@
                     <RowDefinition Height="auto"/>
                     <RowDefinition Height="auto"/>
                     <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
                 </Grid.RowDefinitions>
-                <Label Grid.Row="0" Text="Dodaj ćwiczenie"  />
-                <Entry Grid.Row="1" x:Name="PartEditor"
-        Text="{Binding Part}"
-        HeightRequest="50" />
-                <Label Grid.Row="2" Text="LUB" HorizontalOptions="Center" FontSize="20"/>
-                <Picker x:Name="namePicker"
-        Grid.Row="3" Margin="0,0,0,0"
-        Title="Wybierz ćwiczenie z listy"
-        TitleColor="White"
-        TextColor="black"
-        BackgroundColor="DarkGray"
-        SelectedIndexChanged="OnNameSelected">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Label Grid.Row="0" Grid.Column="0" HorizontalOptions="StartAndExpand" TextColor="{DynamicResource PrimaryColor}" Text="Dodaj ćwiczenie"/>
+                <ImageButton Grid.Row="0" Grid.Column="1" Command="{Binding ButtonInfo}"
+                             HorizontalOptions="StartAndExpand" Scale="1.2" HeightRequest="15"  BackgroundColor="{DynamicResource PrimaryColor}"
+                             Padding="0"
+                             Source="info.svg"/>
+                <Entry Grid.Row="1" Grid.ColumnSpan="2" x:Name="PartEditor"
+                       Placeholder="np: Biceps - sztanga łamana"
+                       PlaceholderColor="{DynamicResource PrimaryColor}"
+                         Text="{Binding Part}"
+                         HeightRequest="50" />
+                <Label Grid.Row="2" Grid.ColumnSpan="2" Text="LUB" TextColor="{DynamicResource PrimaryColor}" HorizontalOptions="Center" FontSize="15"/>
+                <Picker x:Name="namePicker" BackgroundColor="{DynamicResource PageBackgroundColor}" Margin="0,0,0,15"
+                        Grid.Row="3" Grid.ColumnSpan="2" 
+                        Title="Wybierz ćwiczenie z listy"
+                        TitleColor="{DynamicResource PrimaryColor}"
+                        
+                        TextColor="{DynamicResource PrimaryColor}"
+                        SelectedIndexChanged="PartSelected">
                 </Picker>
-                <Label Grid.Row="4" Text="Ilość serii"/>
-                <Entry Grid.Row="5" x:Name="SeriesEditor"
-        Keyboard="Numeric"
-        Text="{Binding Series}"
-        HeightRequest="50" />
-                <Label Grid.Row="6" Text="Ilość powtórzeń"/>
-                <Entry Grid.Row="7" x:Name="RepetitionsEditor"
-        Keyboard="Numeric"
-        Text="{Binding Repetitions}"
-        HeightRequest="50" />
-                <Label Grid.Row="8" Text="obciążenie"/>
-                <Entry Grid.Row="9" x:Name="WeightEditor"
-        Keyboard="Numeric"
-        Text="{Binding Weight}"
-        HeightRequest="50" />
+                <Entry Grid.Row="4" Grid.ColumnSpan="2" x:Name="CommentEditor"
+                       Placeholder="Komentarz do treningu"
+                       PlaceholderColor="{DynamicResource PrimaryColor}"
+                         Text="{Binding Comment}"
+                         HeightRequest="50" />
+                <Label Grid.Row="5" Grid.Column="0" HorizontalOptions="Start" VerticalOptions="Center" TextColor="{DynamicResource PrimaryColor}" Text="Data ćwiczenia"/>
+                <Image Grid.Row="6" Grid.Column="0" BackgroundColor="{DynamicResource PrimaryColor}" HorizontalOptions="Start" HeightRequest="30" Source="calendar.svg"/>
+                <DatePicker x:Name="datepickerEditor" Grid.Row="6" Grid.Column="0"
+                            DateSelected="DatePicker_DateSelected" 
+                            HorizontalOptions="Start" Format="dd.MM.yyyy" Opacity="0" />
+                <Label Grid.Row="6" Grid.Column="0" Margin="30,0,0,0" x:Name="DatetimeEditor" TextColor="{DynamicResource PrimaryColor}"
+                        Text="{Binding DatetimeEntry, StringFormat='{0:dd.MM.yyyy}'}"
+                        HeightRequest="40"  VerticalTextAlignment="Center" TextDecorations="Underline" />
+                <Label Grid.Row="7" Grid.ColumnSpan="2" Text="Dane treningu" TextColor="{DynamicResource PrimaryColor}"/>
+                <Entry Grid.Row="8" Grid.ColumnSpan="2" x:Name="SeriesEditor"
+                        Keyboard="Numeric" Placeholder="Wpisz ilość serii"
+                       PlaceholderColor="{DynamicResource PrimaryColor}"
+                        Text="{Binding Series}"  Completed="Entry_Completed"
+                        HeightRequest="40" />
+                <Entry Grid.Row="9" x:Name="RepetitionsEditor" Placeholder="Wpisz ilość powtórzeń"
+                        Keyboard="Numeric" Grid.ColumnSpan="2" Completed="Entry_Completed"
+                       PlaceholderColor="{DynamicResource PrimaryColor}"
+                        Text="{Binding Repetitions}" 
+                        HeightRequest="40" />
+                <Entry Grid.Row="10" Grid.ColumnSpan="2" x:Name="WeightEditor"
+                        Keyboard="Numeric" Placeholder="Wpisz obciążenie"
+                       PlaceholderColor="{DynamicResource PrimaryColor}"
+                        Text="{Binding Weight}" Completed="Entry_save_Completed"
+                        HeightRequest="40" />
 
-                <Button Grid.Row="10" Text="Zapisz"
-               
-            Command="{Binding SaveCommand}" Background="White"/>
+                <Button Grid.Row="13" Grid.ColumnSpan="2" Text="Zapisz"
+                        x:Name="save"
+                        Command="{Binding SaveCommand}"
+                        Background="{DynamicResource PrimaryColor}" 
+                        TextColor="{DynamicResource PageBackgroundColor}"/>
 
 
             </Grid>
         </Border>
     </Grid>
+    </ScrollView>
 </ContentPage>
