--- a/Views/MainPage.xaml
+++ b/Views/MainPage.xaml
@@ -4,89 +4,120 @@
              x:Class="WorkoutDiary.Views.MainPage"
              xmlns:viewodel="clr-namespace:WorkoutDiary.ViewModels"
              NavigatedTo="ContentPage_NavigatedTo"
-             Title="Dziennik ćwiczeń" Shell.TitleColor="white">
+             Title="Dziennik ćwiczeń" Shell.TitleColor="{DynamicResource PrimaryColor}" BackgroundColor="{DynamicResource PageBackgroundColor}">
 
 
 
     <ContentPage.ToolbarItems >
-        <ToolbarItem Text="Add" Command="{Binding NewExercise}" IconImageSource="{FontImage Glyph='+', Color=White, Size=22}" />
+        <ToolbarItem Text="Add" Command="{Binding NewExercise}" IconImageSource="{FontImage Glyph='+', Color=Black, Size=22}" />
     </ContentPage.ToolbarItems>
-    <Grid>
+    <Grid RowDefinitions="auto,*,auto">
+        <StackLayout Grid.Row="0">
 
-        <ScrollView Grid.Row="0" Margin="5">
+
+            <Grid HorizontalOptions="FillAndExpand">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+
+                </Grid.ColumnDefinitions>
+                <Grid Grid.Column="0" Grid.Row="0" HorizontalOptions="Start" Margin="10,0,0,0">
+                    <DatePicker x:Name="datepicker" Grid.Row="0"   Grid.Column="0" DateSelected="DatePicker_DateSelected" BindingContext="{Binding DatePicker, Mode=TwoWay}" Format="dd.MM.yyyy"  />
+                </Grid>
+
+                <Grid Grid.Column="1" Grid.Row="1" HorizontalOptions="Center">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="auto"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="auto"/>
+                        <ColumnDefinition Width="auto"/>
+                        <ColumnDefinition Width="auto"/>
+
+                    </Grid.ColumnDefinitions>
+                    <ImageButton Grid.Row="0" Grid.Column="0" BackgroundColor="{DynamicResource PrimaryColor}" Source="/Resources/Images/caretleft.svg" Command="{Binding Back}"/>
+                    <Label Grid.Row="0" Grid.Column="1"  TextColor="{DynamicResource PrimaryColor}" Text="{Binding DisplayNumberWeekText}" VerticalTextAlignment="Center"  FontSize="15" />
+                    <ImageButton Grid.Row="0" Grid.Column="2"  BackgroundColor="{DynamicResource PrimaryColor}" Source="/Resources/Images/caretright.svg" Command="{Binding Next}" />
+                </Grid>
+                <Grid Grid.Column="2" Grid.Row="0" HorizontalOptions="End" Margin="0,0,10,0">
+                    <Picker
+                Title="Wybierz partię"
+                ItemsSource="{Binding Parts}"
+                SelectedItem="{Binding SelectedPart}" />
+                </Grid>
+
+            </Grid>
+        </StackLayout>
+
+
+        <ScrollView Margin="5" Grid.Row="1" VerticalOptions="StartAndExpand">
+
             <StackLayout>
-                <StackLayout Orientation="Horizontal"  Padding="20, 10, 20, 0">
-                    <Grid>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="auto"/>
-                        </Grid.RowDefinitions>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="auto"/>
-                            <ColumnDefinition Width="auto"/>
-                            <ColumnDefinition Width="auto"/>
-                            <ColumnDefinition Width="auto"/>
-                        </Grid.ColumnDefinitions>
-                        <DatePicker Grid.Row="0"  Grid.Column="0" HorizontalOptions="Start" Format="dd.MM.yyyy"  />
-                        <ImageButton Grid.Row="0" Grid.Column="1" HorizontalOptions="CenterAndExpand" Source="/Resources/Images/caretleft.svg" Command="{Binding Back}"/>
-                        <Label Grid.Row="0" Grid.Column="2" HorizontalOptions="CenterAndExpand" TextColor="white" Text="{Binding DisplayNumberWeekText}" VerticalTextAlignment="Center"  FontSize="15" />
-                        <ImageButton Grid.Row="0" Grid.Column="3" HorizontalOptions="CenterAndExpand" Source="/Resources/Images/caretright.svg" Command="{Binding Next}" />
-                    </Grid>
-                </StackLayout>
+
+
+
                 <CollectionView x:Name="ExerciseCollectionView"
                          ItemsSource="{Binding BodyParts}"
                         Margin="20"
                         SelectionMode="Single"
                         SelectionChangedCommand="{Binding SelectDayCommand}"
                         SelectionChangedCommandParameter="{Binding Source={RelativeSource Self}, Path=SelectedItem}">
-
-
                     <CollectionView.ItemsLayout>
+
                         <LinearItemsLayout Orientation="Vertical" ItemSpacing="10" />
 
                     </CollectionView.ItemsLayout>
 
 
-                    <!-- Define the appearance of each item in the list -->
+
                     <CollectionView.ItemTemplate>
+
                         <DataTemplate>
-                            <Border >
-                                <Border.StrokeShape>
-                                    <RoundRectangle CornerRadius="15"/>
-                                </Border.StrokeShape>
-                                <Grid Padding="10" ColumnSpacing="1"  BackgroundColor="White">
-                                <!-- Define the rows and columns -->
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height="auto" />
-                                    <RowDefinition Height="auto" />
-                                    <RowDefinition Height="auto" />
-                                    <RowDefinition Height="auto" />
+
+                            <Border StrokeShape="RoundRectangle 10" StrokeThickness="2" Stroke="{DynamicResource PrimaryColor}" >
+
+
+                                <Grid Padding="10" ColumnSpacing="1"  BackgroundColor="{DynamicResource PageBackgroundColor}">
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="auto" />
+                                        <RowDefinition Height="auto" />
+                                        <RowDefinition Height="auto" />
+                                        <RowDefinition Height="auto" />
+                                        <RowDefinition Height="auto" />
                                         <RowDefinition Height="auto" />
                                     </Grid.RowDefinitions>
 
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="*" />
-                                    <!-- First column -->
-                                    <ColumnDefinition Width="*" />
-                                    <!-- Second column -->
-                                    <ColumnDefinition Width="*" />
-                                </Grid.ColumnDefinitions>
-                                
-                                   
-                                
-                                <!-- First row: Categories and Price -->
-                                    <Label Grid.Row="0" Grid.Column="0" TextColor="black" Text="{Binding DateTime, StringFormat='{0:dddd: dd.MM.yyyy}'}"  FontSize="10" />
-                                <Button Grid.Row="0" Grid.Column="2" TextColor="black" Text="X" Command="{Binding Source={RelativeSource AncestorType={x:Type CollectionView}}, Path=BindingContext.Delete}" 
-                            CommandParameter="{Binding .}" FontSize="12"  BackgroundColor="Transparent" HorizontalOptions="EndAndExpand" WidthRequest="40" />
-                                    <Label Grid.Row="0" Grid.ColumnSpan="3" TextColor="black" HorizontalTextAlignment="Center" MaximumWidthRequest="150" LineBreakMode="WordWrap" Text="{Binding Part}" FontSize="22" />
-                                    <Label Grid.Row="2" Grid.Column="0" TextColor="black" HorizontalTextAlignment="Center" Text="Serie" FontSize="15"  />
-                                    <Label Grid.Row="3" Grid.Column="0" TextColor="black" HorizontalTextAlignment="Center" Text="{Binding Series}" FontSize="22"  />
-                                    <Label Grid.Row="2" Grid.Column="1" TextColor="black" HorizontalTextAlignment="Center" Text="Powtórzenia" FontSize="15"  />
-                                <Label Grid.Row="3" Grid.Column="1" TextColor="black"  HorizontalOptions="Center" Text="{Binding Repetitions}" FontSize="22" />
-                                    <Label Grid.Row="2" Grid.Column="3" TextColor="black" HorizontalTextAlignment="Center" Text="Waga" FontSize="15"  />
-                                    <Label Grid.Row="3" Grid.Column="2" TextColor="black" HorizontalOptions="Center" Text="{Binding Weight, StringFormat='{0:F2}kg'}" FontSize="22" />
-                                <!-- Delete button in the first row, right-aligned -->
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*" />
+                                        <!-- First column -->
+                                        <ColumnDefinition Width="*" />
+                                        <!-- Second column -->
+                                        <ColumnDefinition Width="*" />
+                                    </Grid.ColumnDefinitions>
+
+
+
+                                    <!-- First row: Categories and Price -->
+                                    <Label Grid.Row="0" Grid.ColumnSpan="2" TextColor="{DynamicResource PrimaryColor}" Text="{Binding DateTime, StringFormat='{0:dddd: dd.MM.yyyy}'}"  FontSize="10" />
+                                    <Button Grid.Row="0" Grid.Column="2" TextColor="{DynamicResource PrimaryColor}" Text="X" Command="{Binding Source={RelativeSource AncestorType={x:Type CollectionView}}, Path=BindingContext.Delete}" 
+                            CommandParameter="{Binding .}" FontSize="12" HeightRequest="20" Padding="0" BackgroundColor="Transparent" HorizontalOptions="EndAndExpand" VerticalOptions="Start" WidthRequest="40" />
+                                    <Label Grid.Row="1" Grid.ColumnSpan="3" TextColor="{DynamicResource PrimaryColor}" HorizontalTextAlignment="Center"  LineBreakMode="WordWrap" Text="{Binding Part}" FontSize="22" />
+                                    <Label Grid.Row="2" Grid.ColumnSpan="3" TextColor="{DynamicResource PrimaryColor}" HorizontalTextAlignment="Center"  LineBreakMode="WordWrap" Text="{Binding Comment}" TextDecorations="Underline" FontSize="13" />
+                                    <Label Grid.Row="3" Grid.Column="0" TextColor="{DynamicResource PrimaryColor}" HorizontalTextAlignment="Center" Text="Serie" FontSize="15"  />
+                                    <Label Grid.Row="4" Grid.Column="0" TextColor="{DynamicResource PrimaryColor}" HorizontalTextAlignment="Center" Text="{Binding Series}" FontSize="22"  />
+                                    <Label Grid.Row="3" Grid.Column="1" TextColor="{DynamicResource PrimaryColor}" HorizontalTextAlignment="Center" Text="Powtórzenia" FontSize="15"  />
+                                    <Label Grid.Row="4" Grid.Column="1" TextColor="{DynamicResource PrimaryColor}"  HorizontalOptions="Center" Text="{Binding Repetitions}" FontSize="22" />
+                                    <Label Grid.Row="3" Grid.Column="3" TextColor="{DynamicResource PrimaryColor}" HorizontalTextAlignment="Center" Text="Obciążenie" FontSize="15"  />
+                                    <Label Grid.Row="4" Grid.Column="2" TextColor="{DynamicResource PrimaryColor}" HorizontalOptions="Center" Text="{Binding Weight, StringFormat='{0:F2}kg'}" FontSize="22" />
+                                    <!-- Delete button in the first row, right-aligned -->
 
                                 </Grid>
+
                             </Border>
                         </DataTemplate>
                     </CollectionView.ItemTemplate>
@@ -95,6 +126,24 @@
 
             </StackLayout>
         </ScrollView>
+        <StackLayout Grid.RowSpan="2" VerticalOptions="EndAndExpand" IsVisible="{Binding IsBottomGridVisible}" BackgroundColor="{DynamicResource PageBackgroundColor}">
+
+
+            <Border StrokeShape="RoundRectangle 1" StrokeThickness="1" Stroke="{DynamicResource PrimaryColor}" >
+
+                <Grid VerticalOptions="End" HorizontalOptions="FillAndExpand" >
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width = "*"/>
+                    <ColumnDefinition Width = "*"/>
+                </Grid.ColumnDefinitions>
+                    <Label Grid.Row="0" Grid.Column="0" Text="ostatnie obciążenie"  HorizontalTextAlignment="Center" TextColor="{DynamicResource PrimaryColor}" FontSize="20" />
+                    <Label Grid.Row="0" Grid.Column="1" HorizontalTextAlignment="Center"  Text="{Binding LastWeight, StringFormat='{0:F2}kg'}"  TextColor="{DynamicResource PrimaryColor}" FontSize="20" />
+            </Grid>
+            </Border>
+        </StackLayout>
     </Grid>
 
 </ContentPage>
