--- a/Views/AddExercisePage.xaml
+++ b/Views/AddExercisePage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="WorkoutDiary.Views.AddExercisePage"
              xmlns:viewModels="clr-namespace:WorkoutDiary.ViewModels"
-             Title="Dodaj ćwiczenie" Shell.TitleColor="{DynamicResource PrimaryColor}"
+             Title="{Binding PageTitle}" Shell.TitleColor="{DynamicResource PrimaryColor}"
              BackgroundColor="{DynamicResource PageBackgroundColor}">
     <ScrollView>
         
@@ -14,11 +14,24 @@
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
+            <Grid Grid.Row="0" RowDefinitions="auto,auto" ColumnDefinitions="auto,*"  Margin="5,5,5,0" Padding="20" ZIndex="1">
+                <Label Text="Dodaj siłownie lub wybierz z listy" Grid.Column="0" TextColor="Black" Grid.Row="0"/>
+                <Entry x:Name="GymEditor" Grid.Row="1" Grid.Column="0"
+                       Placeholder="Dodaj siłownie"
+                       PlaceholderColor="Gray"
+                         Text="{Binding Gym}" TextColor="{DynamicResource PrimaryColor}"/>
+                <Picker x:Name="namePickerGym" BackgroundColor="{DynamicResource PageBackgroundColor}" Margin="0,0,0,0"
+                        Title="Wybierz z listy" HorizontalOptions="Center" Grid.Column="1"
+                        TitleColor="Gray" Grid.Row="1"
+                        ItemsSource="{Binding TitleGym}"
+                        SelectedItem="{Binding GymPicker}"
+                        TextColor="{DynamicResource PrimaryColor}"/>
 
-        <Border Margin="20" StrokeShape="RoundRectangle 5" StrokeThickness="2" Background="{DynamicResource PageBackgroundColor}" Grid.Row="0" Stroke="#FFFFFF">
+            </Grid>
+            <Border Grid.Row="1" Margin="0" StrokeShape="RoundRectangle 5" StrokeThickness="2" Stroke="Transparent">
 
 
-            <Grid  Margin="20" VerticalOptions="Center" ColumnSpacing="5" Padding="25" Grid.Row="0" RowSpacing="8" >
+            <Grid Margin="5,0,5,0" VerticalOptions="Center" ColumnSpacing="5" Padding="20" Grid.Row="1" RowSpacing="5" >
                 <Grid.RowDefinitions>
                     <RowDefinition Height="auto"/>
                     <RowDefinition Height="auto"/>
@@ -39,52 +52,52 @@
                     <ColumnDefinition Width="auto"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                <Label Grid.Row="0" Grid.Column="0" HorizontalOptions="StartAndExpand" TextColor="{DynamicResource PrimaryColor}" Text="Dodaj ćwiczenie"/>
+                    <Label Grid.Row="0" Grid.Column="0" HorizontalOptions="Start" TextColor="{DynamicResource PrimaryColor}" Text="Dodaj ćwiczenie"/>
                 <ImageButton Grid.Row="0" Grid.Column="1" Command="{Binding ButtonInfo}"
-                             HorizontalOptions="StartAndExpand" Scale="1.2" HeightRequest="15"  BackgroundColor="{DynamicResource PrimaryColor}"
+                             HorizontalOptions="Start" Scale="1.2" HeightRequest="15"  BackgroundColor="{DynamicResource PrimaryColor}"
                              Padding="0"
                              Source="info.svg"/>
                 <Entry Grid.Row="1" Grid.ColumnSpan="2" x:Name="PartEditor"
                        Placeholder="np: Biceps - sztanga łamana"
-                       PlaceholderColor="{DynamicResource PrimaryColor}"
-                         Text="{Binding Part}"
-                         HeightRequest="50" />
+                       PlaceholderColor="Gray"
+                         Text="{Binding Part}" TextColor="{DynamicResource PrimaryColor}"
+                         HeightRequest="40" />
                 <Label Grid.Row="2" Grid.ColumnSpan="2" Text="LUB" TextColor="{DynamicResource PrimaryColor}" HorizontalOptions="Center" FontSize="15"/>
-                <Picker x:Name="namePicker" BackgroundColor="{DynamicResource PageBackgroundColor}" Margin="0,0,0,15"
+                <Picker x:Name="namePicker" BackgroundColor="{DynamicResource PageBackgroundColor}" Margin="0,0,0,0"
                         Grid.Row="3" Grid.ColumnSpan="2" 
                         Title="Wybierz ćwiczenie z listy"
-                        TitleColor="{DynamicResource PrimaryColor}"
-                        
+                        TitleColor="Gray"
+                        HeightRequest="40"
                         TextColor="{DynamicResource PrimaryColor}"
                         SelectedIndexChanged="PartSelected">
                 </Picker>
                 <Entry Grid.Row="4" Grid.ColumnSpan="2" x:Name="CommentEditor"
                        Placeholder="Komentarz do treningu"
-                       PlaceholderColor="{DynamicResource PrimaryColor}"
-                         Text="{Binding Comment}"
-                         HeightRequest="50" />
+                       PlaceholderColor="Gray"
+                         Text="{Binding Comment}" TextColor="{DynamicResource PrimaryColor}"
+                         HeightRequest="40" />
                 <Label Grid.Row="5" Grid.Column="0" HorizontalOptions="Start" VerticalOptions="Center" TextColor="{DynamicResource PrimaryColor}" Text="Data ćwiczenia"/>
                 <Image Grid.Row="6" Grid.Column="0" BackgroundColor="{DynamicResource PrimaryColor}" HorizontalOptions="Start" HeightRequest="30" Source="calendar.svg"/>
                 <DatePicker x:Name="datepickerEditor" Grid.Row="6" Grid.Column="0"
                             DateSelected="DatePicker_DateSelected" 
                             HorizontalOptions="Start" Format="dd.MM.yyyy" Opacity="0" />
-                <Label Grid.Row="6" Grid.Column="0" Margin="30,0,0,0" x:Name="DatetimeEditor" TextColor="{DynamicResource PrimaryColor}"
+                <Label Grid.Row="6" Grid.ColumnSpan="1" Margin="40,0,0,0" x:Name="DatetimeEditor" TextColor="{DynamicResource PrimaryColor}"
                         Text="{Binding DatetimeEntry, StringFormat='{0:dd.MM.yyyy}'}"
                         HeightRequest="40"  VerticalTextAlignment="Center" TextDecorations="Underline" />
                 <Label Grid.Row="7" Grid.ColumnSpan="2" Text="Dane treningu" TextColor="{DynamicResource PrimaryColor}"/>
                 <Entry Grid.Row="8" Grid.ColumnSpan="2" x:Name="SeriesEditor"
                         Keyboard="Numeric" Placeholder="Wpisz ilość serii"
-                       PlaceholderColor="{DynamicResource PrimaryColor}"
+                       PlaceholderColor="Gray" TextColor="{DynamicResource PrimaryColor}"
                         Text="{Binding Series}"  Completed="Entry_Completed"
                         HeightRequest="40" />
                 <Entry Grid.Row="9" x:Name="RepetitionsEditor" Placeholder="Wpisz ilość powtórzeń"
                         Keyboard="Numeric" Grid.ColumnSpan="2" Completed="Entry_Completed"
-                       PlaceholderColor="{DynamicResource PrimaryColor}"
+                       PlaceholderColor="Gray" TextColor="{DynamicResource PrimaryColor}"
                         Text="{Binding Repetitions}" 
                         HeightRequest="40" />
                 <Entry Grid.Row="10" Grid.ColumnSpan="2" x:Name="WeightEditor"
                         Keyboard="Numeric" Placeholder="Wpisz obciążenie"
-                       PlaceholderColor="{DynamicResource PrimaryColor}"
+                       PlaceholderColor="Gray" TextColor="{DynamicResource PrimaryColor}"
                         Text="{Binding Weight}" Completed="Entry_save_Completed"
                         HeightRequest="40" />
 
