--- a/Views/MainPage.xaml
+++ b/Views/MainPage.xaml
@@ -4,7 +4,7 @@
              x:Class="WorkoutDiary.Views.MainPage"
              xmlns:viewodel="clr-namespace:WorkoutDiary.ViewModels"
              NavigatedTo="ContentPage_NavigatedTo"
-             Title="Dziennik ćwiczeń" Shell.TitleColor="{DynamicResource PrimaryColor}" BackgroundColor="{DynamicResource PageBackgroundColor}">
+             Title="{Binding PageTitle}" Shell.TitleColor="{DynamicResource PrimaryColor}" BackgroundColor="#E5E5E5">
 
 
 
@@ -15,22 +15,28 @@
         <StackLayout Grid.Row="0">
 
 
-            <Grid HorizontalOptions="FillAndExpand">
+            <Grid HorizontalOptions="Fill">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="auto"/>
                     <RowDefinition Height="auto"/>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="auto"/>
                     <ColumnDefinition Width="*"/>
 
                 </Grid.ColumnDefinitions>
                 <Grid Grid.Column="0" Grid.Row="0" HorizontalOptions="Start" Margin="10,0,0,0">
                     <DatePicker x:Name="datepicker" Grid.Row="0"   Grid.Column="0" DateSelected="DatePicker_DateSelected" BindingContext="{Binding DatePicker, Mode=TwoWay}" Format="dd.MM.yyyy"  />
                 </Grid>
-
-                <Grid Grid.Column="1" Grid.Row="1" HorizontalOptions="Center">
+                <Grid Grid.Column="1" >
+                    <Picker Grid.Column="0"
+                       Title="Wybierz siłownie"
+                       ItemsSource="{Binding Gym}"
+                       SelectedItem="{Binding SelectedGym}" />
+                   
+                </Grid>
+                <Grid Grid.Column="1" Grid.Row="1" Margin="0,15,0,0" ColumnSpacing="5" HorizontalOptions="Center">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="auto"/>
                     </Grid.RowDefinitions>
@@ -55,7 +61,7 @@
         </StackLayout>
 
 
-        <ScrollView Margin="5" Grid.Row="1" VerticalOptions="StartAndExpand">
+        <ScrollView Margin="5" Grid.Row="1" VerticalOptions="Start">
 
             <StackLayout>
 
@@ -65,11 +71,12 @@
                          ItemsSource="{Binding BodyParts}"
                         Margin="20"
                         SelectionMode="Single"
+                        
                         SelectionChangedCommand="{Binding SelectDayCommand}"
                         SelectionChangedCommandParameter="{Binding Source={RelativeSource Self}, Path=SelectedItem}">
                     <CollectionView.ItemsLayout>
 
-                        <LinearItemsLayout Orientation="Vertical" ItemSpacing="10" />
+                        <LinearItemsLayout Orientation="Vertical" />
 
                     </CollectionView.ItemsLayout>
 
@@ -77,12 +84,46 @@
 
                     <CollectionView.ItemTemplate>
 
-                        <DataTemplate>
+                        <DataTemplate >
+                            <VerticalStackLayout x:Name="Vertical" BackgroundColor="Transparent">
 
-                            <Border StrokeShape="RoundRectangle 10" StrokeThickness="2" Stroke="{DynamicResource PrimaryColor}" >
+                                <VisualStateManager.VisualStateGroups>
+                                    <VisualStateGroup x:Name="CommonStates">
+                                        <VisualState x:Name="Normal">
+                                            <VisualState.Setters>
+                                                <Setter TargetName="Vertical" Property="Scale" Value="1" />
+                                                <Setter TargetName="Vertical" Property="TranslationY" Value="0" />
+                                                <Setter TargetName="Vertical" Property="BackgroundColor" Value="Transparent" />
+                                            </VisualState.Setters>
+                                        </VisualState>
+
+                                        <VisualState x:Name="Selected">
+                                            <VisualState.Setters>
+                                                <Setter TargetName="Vertical" Property="Scale" Value="0.96" />
+                                                <Setter TargetName="Vertical" Property="TranslationY" Value="2" />
+                                                <Setter TargetName="Vertical" Property="BackgroundColor" Value="Transparent" />
+                                               
+                                            </VisualState.Setters>
+                                        </VisualState>
+                                    </VisualStateGroup>
+                                </VisualStateManager.VisualStateGroups>
+
+                                <Label Text="{Binding DateTime, StringFormat='{0:dddd, dd.MM.yyyy}'}"
+                                       FontAttributes="Bold"
+                                       FontSize="12"
+                                       TextColor="Black"
+                                       IsVisible="{Binding ShowSeparator}" />
+
+                                <Frame
+                                CornerRadius="10"
+                                BackgroundColor="White"
+                                Margin="5"
+                                HasShadow="True"
+                                InputTransparent="True">
+                                    
 
 
-                                <Grid Padding="10" ColumnSpacing="1"  BackgroundColor="{DynamicResource PageBackgroundColor}">
+                                    <Grid  BackgroundColor="{DynamicResource PageBackgroundColor}">
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="auto" />
                                         <RowDefinition Height="auto" />
@@ -102,36 +143,44 @@
 
 
 
+
                                     <!-- First row: Categories and Price -->
-                                    <Label Grid.Row="0" Grid.ColumnSpan="2" TextColor="{DynamicResource PrimaryColor}" Text="{Binding DateTime, StringFormat='{0:dddd: dd.MM.yyyy}'}"  FontSize="10" />
+                                    <Label  Grid.Row="0" Grid.Column="0" TextColor="{DynamicResource PrimaryColor}"  HorizontalTextAlignment="Center" Text="{Binding NameGym}" FontSize="10"  />
                                     <Button Grid.Row="0" Grid.Column="2" TextColor="{DynamicResource PrimaryColor}" Text="X" Command="{Binding Source={RelativeSource AncestorType={x:Type CollectionView}}, Path=BindingContext.Delete}" 
-                            CommandParameter="{Binding .}" FontSize="12" HeightRequest="20" Padding="0" BackgroundColor="Transparent" HorizontalOptions="EndAndExpand" VerticalOptions="Start" WidthRequest="40" />
-                                    <Label Grid.Row="1" Grid.ColumnSpan="3" TextColor="{DynamicResource PrimaryColor}" HorizontalTextAlignment="Center"  LineBreakMode="WordWrap" Text="{Binding Part}" FontSize="22" />
+                            CommandParameter="{Binding .}" FontSize="12" HeightRequest="20" Padding="0" BackgroundColor="Transparent" HorizontalOptions="End" VerticalOptions="Start" WidthRequest="40" ZIndex="800"/>
+                                    <Label Grid.Row="1" Grid.ColumnSpan="3" TextColor="{DynamicResource PrimaryColor}" HorizontalTextAlignment="Center"  LineBreakMode="WordWrap" Text="{Binding Part}" FontSize="18" />
                                     <Label Grid.Row="2" Grid.ColumnSpan="3" TextColor="{DynamicResource PrimaryColor}" HorizontalTextAlignment="Center"  LineBreakMode="WordWrap" Text="{Binding Comment}" TextDecorations="Underline" FontSize="13" />
                                     <Label Grid.Row="3" Grid.Column="0" TextColor="{DynamicResource PrimaryColor}" HorizontalTextAlignment="Center" Text="Serie" FontSize="15"  />
-                                    <Label Grid.Row="4" Grid.Column="0" TextColor="{DynamicResource PrimaryColor}" HorizontalTextAlignment="Center" Text="{Binding Series}" FontSize="22"  />
+                                    <Label Grid.Row="4" Grid.Column="0" TextColor="{DynamicResource PrimaryColor}" HorizontalTextAlignment="Center" Text="{Binding Series}" FontSize="18"  />
                                     <Label Grid.Row="3" Grid.Column="1" TextColor="{DynamicResource PrimaryColor}" HorizontalTextAlignment="Center" Text="Powtórzenia" FontSize="15"  />
-                                    <Label Grid.Row="4" Grid.Column="1" TextColor="{DynamicResource PrimaryColor}"  HorizontalOptions="Center" Text="{Binding Repetitions}" FontSize="22" />
-                                    <Label Grid.Row="3" Grid.Column="3" TextColor="{DynamicResource PrimaryColor}" HorizontalTextAlignment="Center" Text="Obciążenie" FontSize="15"  />
-                                    <Label Grid.Row="4" Grid.Column="2" TextColor="{DynamicResource PrimaryColor}" HorizontalOptions="Center" Text="{Binding Weight, StringFormat='{0:F2}kg'}" FontSize="22" />
+                                    <Label Grid.Row="4" Grid.Column="1" TextColor="{DynamicResource PrimaryColor}"  HorizontalOptions="Center" Text="{Binding Repetitions}" FontSize="18" />
+                                    <Label Grid.Row="3" Grid.Column="2" TextColor="{DynamicResource PrimaryColor}" HorizontalTextAlignment="Center" Text="Obciążenie" FontSize="15"  />
+                                    <Label Grid.Row="4" Grid.Column="2" TextColor="{DynamicResource PrimaryColor}" HorizontalOptions="Center" Text="{Binding Weight, StringFormat='{0:F2}kg'}" FontSize="18" />
                                     <!-- Delete button in the first row, right-aligned -->
 
-                                </Grid>
 
-                            </Border>
+
+                                    </Grid>
+                                
+                            </Frame>
+                            </VerticalStackLayout>
                         </DataTemplate>
+                        
                     </CollectionView.ItemTemplate>
+                    
                 </CollectionView>
 
-
+                <Label Text="Brak danych lub ćwiczenia znajdują się w innej siłowni" HorizontalOptions="Center" VerticalOptions="Center"
+                        TextColor="black"
+                        IsVisible="{Binding HasNoData}" />
             </StackLayout>
         </ScrollView>
-        <StackLayout Grid.RowSpan="2" VerticalOptions="EndAndExpand" IsVisible="{Binding IsBottomGridVisible}" BackgroundColor="{DynamicResource PageBackgroundColor}">
+        <StackLayout Grid.RowSpan="2" VerticalOptions="End" IsVisible="{Binding IsBottomGridVisible}" BackgroundColor="{DynamicResource PageBackgroundColor}">
 
 
             <Border StrokeShape="RoundRectangle 1" StrokeThickness="1" Stroke="{DynamicResource PrimaryColor}" >
 
-                <Grid VerticalOptions="End" HorizontalOptions="FillAndExpand" >
+                <Grid VerticalOptions="End" HorizontalOptions="Center" >
                 <Grid.RowDefinitions>
                     <RowDefinition Height="auto"/>
                 </Grid.RowDefinitions>
@@ -139,8 +188,8 @@
                     <ColumnDefinition Width = "*"/>
                     <ColumnDefinition Width = "*"/>
                 </Grid.ColumnDefinitions>
-                    <Label Grid.Row="0" Grid.Column="0" Text="ostatnie obciążenie"  HorizontalTextAlignment="Center" TextColor="{DynamicResource PrimaryColor}" FontSize="20" />
-                    <Label Grid.Row="0" Grid.Column="1" HorizontalTextAlignment="Center"  Text="{Binding LastWeight, StringFormat='{0:F2}kg'}"  TextColor="{DynamicResource PrimaryColor}" FontSize="20" />
+                    <Label Grid.Row="0" Grid.Column="0" Text="Max ostatnie obciążenie "  HorizontalTextAlignment="Center" TextColor="{DynamicResource PrimaryColor}" FontSize="15" />
+                    <Label Grid.Row="0" Grid.Column="1" HorizontalTextAlignment="Center"  Text="{Binding LastWeight, StringFormat='{0:F2}kg'}"  TextColor="{DynamicResource PrimaryColor}" FontSize="15" />
             </Grid>
             </Border>
         </StackLayout>
