--- a/Views/RotationPlanPage.xaml
+++ b/Views/RotationPlanPage.xaml
@@ -5,10 +5,9 @@
     xmlns:viewmodels="clr-namespace:WorkoutDiary.ViewModels" Shell.TitleColor="{DynamicResource PrimaryColor}" BackgroundColor="#E5E5E5">
 
 
-    <Grid RowDefinitions="auto, *">
+    <Grid RowDefinitions="auto">
 
-        <ScrollView Grid.Row="0">
-        <VerticalStackLayout Padding="20" Spacing="20">
+        <VerticalStackLayout Grid.Row="0" Padding="20" Spacing="20">
             <!-- REKOMENDOWANE PARTIE -->
             <Label Text="Kolejne sugerowane ćwiczenia:" 
                    FontSize="20" 
@@ -30,9 +29,7 @@
             <Label Text="Ostatnie dwa dni treningowe:" 
                    FontSize="20" 
                    FontAttributes="Bold"
-                   Margin="0,20,0,0"/>
-
-
+                   Margin="0,0,0,0"/>
 
 
             <CollectionView ItemsSource="{Binding LastTrainings}">
@@ -65,8 +62,6 @@
 
 
         </VerticalStackLayout>
-
-    </ScrollView>
 
 
 
