--- a/Views/TrainingPlanPage.xaml
+++ b/Views/TrainingPlanPage.xaml
@@ -184,6 +184,10 @@
             Command="{Binding NewTrainingPlanAddedCommand}" Opacity="0.5" Text="kliknij, aby dodać tygodniowy plan treningowy" LineBreakMode="CharacterWrap"
             FontSize="20" HorizontalOptions="Center" Padding="50" BorderWidth="1" Margin="20" IsVisible="{Binding IsDisplayButton}"
             TextColor="Black" Background="White" />
+            <Button
+            Command="{Binding ChoiceTrainingPlanAddedCommand}" Opacity="0.5" Text="kliknij, aby wybrać tygodniowy plan treningowy" LineBreakMode="CharacterWrap"
+            FontSize="20" HorizontalOptions="Center" Padding="50" BorderWidth="1" Margin="20" IsVisible="{Binding IsDisplayButton}"
+            TextColor="Black" Background="White" />
         </VerticalStackLayout>
     </Grid>
 
